--- a/CP/Base.lproj/Main.storyboard
+++ b/CP/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UBJ-Gl-8I8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4077.5999999999999" y="-441.22938530734638"/>
+            <point key="canvasLocation" x="4186" y="-441"/>
         </scene>
         <!--Home-->
         <scene sceneID="K9N-Hd-QUb">
@@ -293,11 +293,6 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="azI-bJ-r5a">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="258"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </view>
-                        <view key="tableFooterView" contentMode="scaleToFill" id="QLU-hZ-MgN">
-                            <rect key="frame" x="0.0" y="330" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
