just getting used to git

--- a/CP/Base.lproj/Main.storyboard
+++ b/CP/Base.lproj/Main.storyboard
@@ -294,7 +294,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="RRv-LH-wA8" kind="show" id="pNa-AE-3n6"/>
+                                    <segue destination="Ub3-Iq-EWB" kind="show" id="UPh-UV-mef"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -307,25 +307,36 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h6F-KS-4qM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4294" y="160"/>
+            <point key="canvasLocation" x="4294" y="256"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="dvv-Pt-cRU">
+        <!--Title-->
+        <scene sceneID="o3C-RS-iff">
             <objects>
-                <viewController id="RRv-LH-wA8" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="cf4-h4-8IW"/>
-                        <viewControllerLayoutGuide type="bottom" id="FBV-eO-vRz"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kbf-Tr-j0a">
+                <tableViewController id="Ub3-Iq-EWB" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="LcC-xy-eip">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wQZ-8D-a3v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="carpoolTimeCell" id="Qzz-uc-GAL">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qzz-uc-GAL" id="0Rv-8a-bmW">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Ub3-Iq-EWB" id="i8r-4D-rvf"/>
+                            <outlet property="delegate" destination="Ub3-Iq-EWB" id="B1w-y2-4oN"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Title" id="0MZ-Jk-XYK"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QA5-tW-mug" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5074" y="-318"/>
+            <point key="canvasLocation" x="5098" y="256"/>
         </scene>
         <!--Settings-->
         <scene sceneID="KCl-0a-Ff8">
@@ -386,7 +397,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sef-hm-YZQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5039" y="371"/>
+            <point key="canvasLocation" x="5479" y="-493"/>
         </scene>
         <!--Change Name-->
         <scene sceneID="74e-6e-fAJ">
@@ -448,7 +459,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1qt-gl-NZj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5791" y="370"/>
+            <point key="canvasLocation" x="6290" y="-493"/>
         </scene>
         <!--My Carpools-->
         <scene sceneID="EHN-GI-82z">
@@ -660,7 +671,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ce8-uV-KAa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5038" y="1011"/>
+            <point key="canvasLocation" x="5097" y="1011"/>
         </scene>
         <!--You lead these carpools-->
         <scene sceneID="Yni-Ii-XQU">
@@ -753,7 +764,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="978-Tz-q4k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5038" y="1740"/>
+            <point key="canvasLocation" x="5097" y="1739"/>
         </scene>
         <!--New Carpool-->
         <scene sceneID="5c1-E6-BjI">
@@ -803,7 +814,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c0A-R6-UcI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4294" y="1011"/>
+            <point key="canvasLocation" x="4294" y="985"/>
         </scene>
         <!--Main Intro View Controller-->
         <scene sceneID="6re-fc-kob">
